Update social sharing metadata and manifest

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,20 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#E07A24" />
     <meta
       name="description"
-      content="CRUMPET - The crumbliest, dankest coin on the blockchain"
+      content="CRUMPET - The coin you don't want to miss"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:title" content="CRUMPET" />
+    <meta property="og:description" content="CRUMPET - The coin you don't want to miss" />
+    <meta property="og:image" content="%PUBLIC_URL%/assets/CRUMPETT.jpeg" />
+    <meta property="og:url" content="%PUBLIC_URL%" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="CRUMPET" />
+    <meta name="twitter:description" content="CRUMPET - The coin you don't want to miss" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/assets/CRUMPETT.jpeg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/CRUMPETT.jpeg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
